Added stonecutter to project (1.14.4 base)