@@ -5,9 +5,9 @@ import megabytesme.minelights.CompassType;
 import megabytesme.minelights.MineLightsClient;
 import megabytesme.minelights.PlayerDto;
 import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.option.GameOptions;
-
+import net.minecraft.client.options.GameOptions;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
@@ -76,25 +76,15 @@ public class EffectPainter {
         }
 
         paintEnvironmentalBase(state, player);
-
-        if (MineLightsClient.CONFIG.enableExperienceBar) {
+        if (MineLightsClient.CONFIG.enableExperienceBar)
             paintExperienceBar(state, player);
-        }
-
         paintPlayerBars(state, player);
-
-        if (MineLightsClient.CONFIG.enableSaturationBar) {
+        if (MineLightsClient.CONFIG.enableSaturationBar)
             paintSaturationAndAirBar(state, player);
-        }
-
-        if (MineLightsClient.CONFIG.enableCompassEffect) {
+        if (MineLightsClient.CONFIG.enableCompassEffect)
             paintCompass(state, player);
-        }
-
-        if (MineLightsClient.CONFIG.enableLowHealthWarning) {
+        if (MineLightsClient.CONFIG.enableLowHealthWarning)
             paintHealthEffects(state, player);
-        }
-
         paintPlayerEffects(state, player);
 
         return state;
@@ -259,7 +249,6 @@ public class EffectPainter {
 
     private void paintSaturationAndAirBar(FrameStateDto state, PlayerDto player) {
         List<String> barKeys = KeyMap.getSaturationBar();
-
         boolean isInWaterNow = player.getCurrentBlock().equals("block.minecraft.water");
 
         if (isInWaterNow) {
@@ -282,7 +271,6 @@ public class EffectPainter {
         } else {
             value = player.getSaturation();
             maxValue = 20f;
-
             fullColor = new RGBColorDto(200, 255, 0);
             dimColor = new RGBColorDto(40, 50, 0);
         }
@@ -454,14 +442,14 @@ public class EffectPainter {
         List<String> friendlyNames = new ArrayList<>();
         GameOptions options = MinecraftClient.getInstance().options;
 
-        List<String> keybindsToFetch = List.of(
-                options.forwardKey.getBoundKeyTranslationKey(),
-                options.backKey.getBoundKeyTranslationKey(),
-                options.leftKey.getBoundKeyTranslationKey(),
-                options.rightKey.getBoundKeyTranslationKey(),
-                options.jumpKey.getBoundKeyTranslationKey(),
-                options.sneakKey.getBoundKeyTranslationKey(),
-                options.sprintKey.getBoundKeyTranslationKey());
+        List<String> keybindsToFetch = Arrays.asList(
+                options.keyForward.getDefaultKeyCode().toString(),
+                options.keyBack.getDefaultKeyCode().toString(),
+                options.keyLeft.getDefaultKeyCode().toString(),
+                options.keyRight.getDefaultKeyCode().toString(),
+                options.keyJump.getDefaultKeyCode().toString(),
+                options.keySneak.getDefaultKeyCode().toString(),
+                options.keySprint.getDefaultKeyCode().toString());
 
         for (String key : keybindsToFetch) {
             if (key == null || !key.startsWith("key.keyboard.")) {
@@ -469,10 +457,9 @@ public class EffectPainter {
             }
 
             String[] parts = key.split("\\.");
-
             String friendlyName = "";
             if (parts.length == 4) {
-                friendlyName = (parts[2].substring(0, 1) + parts[3]).toUpperCase(); // "L" + "SHIFT" -> "LSHIFT"
+                friendlyName = (parts[2].substring(0, 1) + parts[3]).toUpperCase();
             } else if (parts.length == 3) {
                 friendlyName = parts[2].toUpperCase();
             }
